fix gap 50px

--- a/src/components/Cards/_Card.scss
+++ b/src/components/Cards/_Card.scss
@@ -55,7 +55,7 @@
 	flex-wrap: wrap;
 
     @media screen and (min-width: $breakpoint-tablet) {
-        gap: 60px;
+        gap: 50px;
         padding: 5% 0;
         background-color: #f7f7f7;
         border-radius: 25px;
